--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <ul>
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">About</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Programme</a></li>
+            <li class="download"><a class="buttons" href="https://github.com/NLP-Power/nlp-power.github.io/blob/main/program.md">Programme</a></li>
           {% endif %}
-          <li><a class="buttons github" href="{{ site.github.repository_url }}">Accepted</a></li>
+          <li><a class="buttons github" href="https://github.com/NLP-Power/nlp-power.github.io/blob/main/accepted.md">Accepted</a></li>
         </ul>
 
 
