--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,11 @@
 
         <ul>
           {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">About</a></li>
-            <li class="download"><a class="buttons" href="https://github.com/NLP-Power/nlp-power.github.io/blob/main/program.md">Programme</a></li>
+            <li class="download"><a class="buttons" href="https://nlp-power.github.io/about.html">About</a></li>
+            <li class="download"><a class="buttons" href="https://nlp-power.github.io/program.html">Programme</a></li>
           {% endif %}
-          <li><a class="buttons github" href="https://github.com/NLP-Power/nlp-power.github.io/blob/main/accepted.md">Accepted</a></li>
+          <li><a class="buttons github" href="https://nlp-power.github.io/accepted.html">Accepted</a></li>
         </ul>
-
 
       </header>
 
