--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,8 @@
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="https://nlp-power.github.io/about.html">About</a></li>
-            <li class="download"><a class="buttons" href="https://nlp-power.github.io/program.html">Programme</a></li>
-          {% endif %}
+          <li class="download"><a class="buttons" href="https://nlp-power.github.io/about.html">About</a></li>
+          <li><a class="buttons" href="https://nlp-power.github.io/program.html">Programme</a></li>
           <li><a class="buttons github" href="https://nlp-power.github.io/accepted.html">Accepted</a></li>
         </ul>
 
