--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
 
         <ul>
           <li class="download"><a class="buttons" href="https://nlp-power.github.io/about.html">About</a></li>
-          <li><a class="buttons hover" href="https://nlp-power.github.io/program.html">Programme</a></li>
+          <li><a class="buttons" href="https://nlp-power.github.io/cfp.html">Call for Papers</a></li>
+          <li><a class="buttons" href="https://nlp-power.github.io/program.html">Programme</a></li>
           <li><a class="buttons github" href="https://nlp-power.github.io/accepted.html">Accepted</a></li>
         </ul>
 
